--- a/tests/templates/base.html
+++ b/tests/templates/base.html
@@ -21,6 +21,8 @@
                     {% if user.is_authenticated %}
                     <li id="create-new-entry"><a href="{% url 'blogs-entry-create' %}">Create new entry</a></li>
                     <li id="logout"><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
+                    <li id="admin"><a href="{% url 'admin:index' %}">Admin</a></li>
+
                     {% else %}
                     <li id="login"><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
                     {% endif %}
