--- a/tests/templates/registration/registration_form.html
+++ b/tests/templates/registration/registration_form.html
@@ -2,11 +2,10 @@
 {% load url from future %}
 
 {% block contents %}
-<h1>Login</h1>
+<h1>Registration</h1>
 
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <p><input type="submit" value="Login"></p>
+    <p><input type="submit" value="Register"></p>
 </form>
-<p>New user? -- <a href="{% url 'registration_register' %}">Register</a></p>
 {% endblock %}
