Now supplement feature has developped.
TODO:

-   Write default template for use
-   Write more supplements for sample
-   Write more tests
-   Write more documentation

--- a/tests/templates/registration/registration_form.html
+++ b/tests/templates/registration/registration_form.html
@@ -6,6 +6,7 @@
 
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
+    {{ supplement_form.as_p }}
     <p><input type="submit" value="Register"></p>
 </form>
 {% endblock %}
