--- a/registration/templates/registration/registration_closed.html
+++ b/registration/templates/registration/registration_closed.html
@@ -1,1 +1,11 @@
-
+{% load url from future %}
+{% load i18n %}
+<html>
+    <head>
+        <title>{% trans 'Registration is closed' %}</title>
+    </head>
+    <body>
+        <h1>{% trans 'Registration is closed' %}</h1>
+        <p>{% trans 'I am afraid that registration is currently closed.' %}</p>
+    </body>
+</html>
