--- a/registration/templates/registration/registration_complete.html
+++ b/registration/templates/registration/registration_complete.html
@@ -1,1 +1,12 @@
+{% load url from future %}
+{% load i18n %}
+<html>
+    <head>
+        <title>{% trans 'Registration complete' %}</title>
+    </head>
+    <body>
+        <h1>{% trans 'Registration complete' %}</h1>
+        <p>{% trans 'Your registration has been created successfully. Please wait until the inspectors verify your registration.' %}</p>
+    </body>
+</html>
 
