--- a/tests/templates/404.html
+++ b/tests/templates/404.html
@@ -1,1 +1,7 @@
-404 - Page Not Found
+{% extends 'base.html' %}
+
+{% block title %}404 - Page not found{% endblock %}
+{% block contents %}
+<h1>404 - Page Not found</h1>
+<p>The requested page is not found.</p>
+{% endblock %}
