--- a/tests/templates/registration/logout.html
+++ b/tests/templates/registration/logout.html
@@ -1,8 +1,8 @@
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
 {% load url from future %}
-
+{% load i18n %}
+{% block title %}{% trans 'Logged out' %}{% endblock %}
 {% block contents %}
-<h1>Logged out</h1>
-<p>You are logged out</p>
-<p><a href="{% url 'auth_login' %}">Login</a> or <a href="{% url 'registration_register' %}">Register</a></p>
+<h1>{% trans 'Logged out' %}</h1>
+<p>{% trans 'You are logged out.' %}</p>
 {% endblock %}
