--- a/registration/templates/registration/activation_complete.html
+++ b/registration/templates/registration/activation_complete.html
@@ -1,1 +1,12 @@
+{% load url from future %}
+{% load i18n %}
+<html>
+    <head>
+        <title>{% trans 'Activation has complete!' %}</title>
+    </head>
+    <body>
+        <h1>{% trans 'Activation has complete' %}</h1>
+        <p>{% trans 'Your account was correctly activated! Enjoy!' %}</p>
+    </body>
+</html>
 
