--- a/tests/templates/registration/activation_form.html
+++ b/tests/templates/registration/activation_form.html
@@ -1,12 +1,12 @@
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
 {% load url from future %}
-
+{% load i18n %}
+{% block title %}{% trans 'Activate your account' %}{% endblock %}
 {% block contents %}
-<h1>Activation</h1>
-<p>Please fill your account password to activate your account</p>
-
+<h1>{% trans 'Activate your account' %}</h1>
+<p>{% trans 'Please fill your account password to complete account activation' %}</p>
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <p><input type="submit" value="Register"></p>
+    <p><input type="submit" value="{% trans 'Activate' %}"></p>
 </form>
 {% endblock %}
