--- a/tests/templates/registration/registration_closed.html
+++ b/tests/templates/registration/registration_closed.html
@@ -1,7 +1,9 @@
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
 {% load url from future %}
+{% load i18n %}
+{% block title %}{% trans 'Registration is closed' %}{% endblock %}
 
 {% block contents %}
-<h1>Registration has closed</h1>
-<p>I'm sorry but new registration has closed now</p>
+<h1>{% trans 'Registration is closed' %}</h1>
+<p>{% trans 'I am afraid that registration is currently closed.' %}</p>
 {% endblock %}
