--- a/tests/templates/registration/registration_complete.html
+++ b/tests/templates/registration/registration_complete.html
@@ -1,9 +1,9 @@
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
 {% load url from future %}
+{% load i18n %}
+{% block title %}{% trans 'Registration complete' %}{% endblock %}
 
 {% block contents %}
-<h1>Registration has done</h1>
-
-<p>Registration has done. The acception/rejection mail will be sent after inspectors
-    has checked your registration</p>
+<h1>{% trans 'Registration complete' %}</h1>
+<p>{% trans 'Your registration has been created successfully. Please wait until the inspectors verify your registration.' %}</p>
 {% endblock %}
