--- a/registration/templates/admin/registration/registrationprofile/change_form.html
+++ b/registration/templates/admin/registration/registrationprofile/change_form.html
@@ -2,9 +2,15 @@
 {% load url from future %}
 {% load i18n %}
 
-{% block content_title %}<h1>{% blocktrans with original.user as user %}Inspect {{ user }}'s registration{% endblocktrans %}</h1>{% endblock %}
+{% block content_title %}
+<h1>
+{% blocktrans with original.user as user %}
+Inspect the registration of {{ user }}
+{% endblocktrans %}
+</h1>
+{% endblock %}
 
 {% block content %}
-<p>{% blocktrans %}Please chose action to this registration and click the Save button on bottom.{% endblocktrans %}</p>
+<p>{% blocktrans %}Please select an action and click the Save button on bottom.{% endblocktrans %}</p>
 {{ block.super }}
 {% endblock %}
