--- a/registration/templates/registration/activation_complete.html
+++ b/registration/templates/registration/activation_complete.html
@@ -2,11 +2,11 @@
 {% load i18n %}
 <html>
     <head>
-        <title>{% trans 'Activation has complete!' %}</title>
+        <title>{% trans 'Activation was complete' %}</title>
     </head>
     <body>
-        <h1>{% trans 'Activation has complete' %}</h1>
-        <p>{% trans 'Your account was correctly activated! Enjoy!' %}</p>
+        <h1>{% trans 'Activation was complete' %}</h1>
+        <p>{% trans 'Your account was activated' %}</p>
     </body>
 </html>
 
