--- a/registration/templates/registration/registration_complete.html
+++ b/registration/templates/registration/registration_complete.html
@@ -2,11 +2,13 @@
 {% load i18n %}
 <html>
     <head>
-        <title>{% trans 'Registration complete' %}</title>
+        <title>{% trans 'Registration was complete' %}</title>
     </head>
     <body>
-        <h1>{% trans 'Registration complete' %}</h1>
-        <p>{% trans 'Your registration has been created successfully. Please wait until the inspectors verify your registration.' %}</p>
+        <h1>{% trans 'Registration was complete' %}</h1>
+        <p>{% trans 'Your registration was created successfully. %}</p>
+        <p>{% trans 'Please wait until the inspector verify your registration.' %}
+        {% trans 'You will receive an acceptance or rejection email within several days.' %}</p>
     </body>
 </html>
 
