--- a/registration/templates/registration/activation_complete.html
+++ b/registration/templates/registration/activation_complete.html
@@ -1,12 +1,12 @@
+{% extends 'registration/base.html' %}
 {% load url from future %}
 {% load i18n %}
-<html>
-    <head>
-        <title>{% trans 'Activation was complete' %}</title>
-    </head>
-    <body>
-        <h1>{% trans 'Activation was complete' %}</h1>
-        <p>{% trans 'Your account was activated' %}</p>
-    </body>
-</html>
 
+{% block title %}{% trans 'Activation was complete' %}{% endblock %}
+
+{% block content_title %}<h1>{% trans 'Activation was complete' %}</h1>{% endblock %}
+
+{% block contents %}
+{{ block.super }}
+<p>{% trans 'Your account was activated' %}</p>
+{% endblock %}
