--- a/registration/templates/registration/logout.html
+++ b/registration/templates/registration/logout.html
@@ -1,11 +1,12 @@
+{% extends 'registration/base.html' %}
 {% load url from future %}
 {% load i18n %}
-<html>
-    <head>
-        <title>{% trans 'Logged out' %}</title>
-    </head>
-    <body>
-        <h1>{% trans 'Logged out' %}</h1>
-        <p>{% trans 'You are logged out.' %}</p>
-    </body>
-</html>
+
+{% block title %}{% trans 'Logged out' %}{% endblock %}
+
+{% block content_title %}<h1>{% trans 'Logged out' %}</h1>{% endblock %}
+
+{% block contents %}
+{{ block.super }}
+<p>{% trans 'You are logged out.' %}</p>
+{% endblock %}
