--- a/src/registration/templates/admin/registration/registrationprofile/change_form.html
+++ b/src/registration/templates/admin/registration/registrationprofile/change_form.html
@@ -3,9 +3,7 @@
 
 {% block content_title %}
 <h1>
-{% blocktrans with original.user as user %}
-Inspect the registration of {{ user }}
-{% endblocktrans %}
+{% blocktrans with original.user as user %}Inspect the registration of {{ user }}{% endblocktrans %}
 </h1>
 {% endblock %}
 
